--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
     "permissions": [
         "activeTab",
         "scripting",
-        "notifications"
+        "notifications",
+        "storage"
     ],
     "background": {
         "service_worker": "background.js"
