--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Xpath generator with AI",
     "version": "0.1",
-    "description": "Генерирует xpath для выделенных элементов страницы \n Разработал Евгений Герасин",
+    "description": "Генерирует xpath для выделенных элементов страницы. Разработал Евгений Герасин",
     "permissions": [
         "activeTab",
         "scripting",
